css/_portfolio.scss
.portfolio-list {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
}

.portfolio-item {
    width: 49.1%;
    margin-bottom: 65px;
    
    @include tablet {
        width: 100%;
    }
    
    img {
        display: block;
        width: 100%;
        max-width: 100%;
        height: auto;
        margin-bottom: 25px;
        border-radius: 4px;
        box-shadow: 0 5px 10px -3px rgba(25, 22, 29, 0.3);
        box-shadow: 0 13px 13px -3px rgba(25,22,29,0.4);
        transition: opacity 0.23s;
        background: rgba(18, 18, 31, 0.25);
        
        &:hover {
            opacity: 0.65;
        }
        &:active {
            opacity: 0.9;
        }
    }
    h3 {
        font-family: "Poppins", Helvetica, Arial, sans-serif;
        margin: 0;
        font-size: 24px;
        padding-bottom: 12px;
        
        @include appnav {
            font-size: 20px;
        }
        
    }
    .tags {
        margin-bottom: 10px;
    }
    p {
        padding: 0;
        margin: 0;
        line-height: 1.6;
        font-size: 16px;
        font-size: 16.5px;
        text-align: left;
        
        @include appnav {
            font-size: 14px;
        }
        
    }
    
}

.tags {
    @extend clear;
    span {
        font-family: "Poppins", Helvetica, Arial, sans-serif;
        float: left;
        line-height: 1;
        font-size: 13px;
        font-weight: 700;
        padding: 7px 13px;
        border-radius: 40px;
        background: #565e92;
        text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
        box-shadow: inset 0 0 1px rgba(218, 219, 228, 0.15);
        margin-bottom: 10px;
        
        @include mobile {
            font-size: 12px;
        }

        & + span {
            margin-left: 4px;
        }

        &.primary {
            background: #5faac7;    
            background: #7f6cbf;
        }
        &.secondary {
            background: #7f6cbf;
            background: #5faac7;   
        }
    }
}

